feat:Change the title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>menu de inicio</title>
+        <title>Karla Elizabeth Hernandez de Lira</title>
         <link rel="stylesheet" type="text/css" href="estilo.css">
     </head>
     <dody>
